--- a/src/package.json
+++ b/src/package.json
@@ -1,7 +1,9 @@
 {
   "devDependencies": {
-    "@nomicfoundation/hardhat-toolbox": "^2.0.0",
+    "@nomicfoundation/hardhat-toolbox": "^1.0.2",
+    "@nomiclabs/buidler": "^1.4.8",
     "hardhat": "^2.13.0",
+    "hardhat-gas-reporter": "^1.0.9",
     "mocha": "^10.2.0"
   },
   "dependencies": {
